--- a/style.css
+++ b/style.css
@@ -49,5 +49,20 @@ h2 {
     font-weight: lighter;
 }
 hr {
-    border: 0.5px solid hsla(32, 10%, 34%, 0.082);
+    border: 0.5px solid hsla(32, 10%, 34%, 0.095);
+}
+table {
+    width: 100%;
+}
+td {
+    border-bottom: 0.5px solid hsla(32, 10%, 34%, 0.095);
+    height: 40px;
+    font-family: "Outfit Light";
+    font-size: 16px;
+    color: hsl(30, 10%, 34%);
+    text-transform: capitalize;
+}
+.value {
+    color: hsl(14, 45%, 36%);
+    font-weight: bold;
 }
